--- a/cindex.html
+++ b/cindex.html
@@ -183,7 +183,7 @@
             }
 
             .review button{
-                margin-top: 15px;
+                margin-top: 15px; 
                 font-size: 1rem;
             }
         </style>
@@ -192,11 +192,11 @@
         <!-- 헤더: 네비게이션 바 -->
         <header>
             <div class="navbar">
-                <div class="logo">Anonym</div>
+                <div class="logo"><a href="cindex.html">Anonym</a></div>
                 <nav>
                     <ul class="nav-menu">
-                        <li><a href="#">자유게시판</a></li>
-                        <li><a href="#">기업 리뷰</a></li>
+                        <li><a href="f자유게시판목록_최종.html">자유게시판</a></li>
+                        <li><a href="cindex.html">기업 리뷰</a></li>
                         <li><a href="#">채용 공고</a></li>
                         <li><a href="#">기업 서비스</a></li>
                     </ul>
@@ -227,7 +227,7 @@
                         <div class="review">
                             <h3>내 회사 리뷰하기</h3>
                             <p>회원님의 리뷰는 구직자들이 회사를<br> 검토하는데 도움이 됩니다.</p>
-                            <button class="review-button">리뷰 쓰기</button>
+                            <button class="review-button" onclick="location.href='c리뷰등록_최종.html'">리뷰 쓰기</button>
                         </div>
                         <div class="image-container">
                             <img src="bg-company-main.png" alt="회사 리뷰 이미지" />
@@ -242,7 +242,7 @@
                         <div  class="board">
                             <img src="potato.jpeg" alt="회사 이미지" />
                             <div class="">
-                                <h3><a href="#">회사명</a></h3>
+                                <h3><a href="c회사소개_최종.html">회사명</a></h3>
                                 <p>평점: ⭐⭐⭐⭐☆</p>
                             </div>
                         </div>
