--- a/c리뷰목록_최종.html
+++ b/c리뷰목록_최종.html
@@ -466,14 +466,15 @@ main nav{
     <!-- 헤더 -->
     <header>
             <div class="navbar">
-                <div class="logo">Anonym</div>
+                <div class="logo"><a href="cindex.html">Anonym</a></div>
                 <nav>
                     <ul class="nav-menu">
-                        <li><a href="#">자유게시판</a></li>
-                        <li><a href="#">기업 리뷰</a></li>
+                        <li><a href="f자유게시판목록_최종.html">자유게시판</a></li>
+                        <li><a href="cindex.html">기업 리뷰</a></li>
                         <li><a href="#">채용 공고</a></li>
                         <li><a href="#">기업 서비스</a></li>
                     </ul>
+                </nav>
                 </nav>
                 <nav>
                     <ul class="nav-links">
@@ -505,16 +506,16 @@ main nav{
                         </div>
                     </div>
                     <div>
-                        <button class="review-btn">이 회사 리뷰하기</button>
+                        <button class="review-btn" onclick="location.href='c리뷰등록_최종.html'">이 회사 리뷰하기</button>
                     </div>
                 </section>
             </div>
 
             <nav>
                 <div class="tab-menu">
-                    <a href="#">소개</a>
-                    <a href="#" class="active">리뷰</a>
-                    <a href="#">커뮤니티</a>
+                    <a href="c회사소개_최종.html">소개</a>
+                    <a href="c리뷰목록_최종.html" class="active">리뷰</a>
+                    <a href="c사내커뮤니티글목록_최종.html">커뮤니티</a>
                 </div>
             </nav>
 
